<resources>
    <string name="app_name">Jaga Makan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="nama">Nama</string>
    <string name="login_google">Masuk dengan Google</string>
    <string name="chart">Chart</string>
    <string name="rules">Aturan Pemakaian</string>
    <string name="desc">Deskripsi</string>
    <string name="no_results">Barang yang anda cari tidak ditemukan</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="regisTittle">Lengkapi dulu datamu !</string>
    <string name="regisSubTittle">Masukan datamu dibawah ini !</string>
    <string name="title_welcome_page">Selamat datang di Jaga Makan!</string>
    <string name="message_welcome_page">Mari hidup sehat dan jadikan Sehat sebagai Kebiasaan, Mulai dari Pilihan Makananmu!</string>
    <string name="textWelcomeHome">Halo Sahabat Jaga Makan</string>
    <string name="subTextWelcomeHome">Selamat datang di Jaga Makan! Kami ada untuk mengontrol konsumsi kalori makanan anda. Kami siap membantu anda dalam perjalanan untuk hidup yang lebih sehat.</string>
    <string name="subTextCalculator">Belum Tau Kebutuhan Kalorimu?\nYuk Hitung Sekarang</string>
    <string name="textCalculator">Cek Kebutuhan Kalorimu</string>
    <string name="titleKalori">Kebutuhan Kalori Anda</string>
    <string name="beratBadan">0</string>
    <string name="titleBeratBadan">Berat</string>
    <string name="tinggiBadan">0</string>
    <string name="titleTinggiBadan">Tinggi</string>
    <string name="umur">0</string>
    <string name="titleUmur">Umur</string>
    <string name="cekKebutuhan">3220.9</string>
    <string name="titleCekKebutuhan">Kalori</string>
    <string name="cek">Hitung Kalori Anda</string>
    <string name="Titlebmr_calculator">BMR Calculator</string>
    <string name="descCal">Masih bingung berapa kebutuhan kalorimu?\nYuk hitung kebutuhan kalorimu sekarang.</string>
    <string name="title">BMR Calculator</string>
    <string name="gender_label">Jenis Kelamin :</string>
    <string name="female">Perempuan</string>
    <string name="enter_weight">Masukan Berat Badan:</string>
    <string name="weight_hint">Berat Badan (kg)</string>
    <string name="enter_height">Masukan Tinggi Badan:</string>
    <string name="height_hint">Tinggi Badan (cm)</string>
    <string name="enter_age">Masukan Umur:</string>
    <string name="age_hint">Umur</string>
    <string name="calculate">Calculate BMR</string>
    <string name="activities">Jenis Aktivitas:</string>
    <string name="male">Laki-Laki</string>
    <string name="marathon_info">Marathon Info</string>
    <string name="log_bmr">Log BMR value</string>
    <string name="passive">passive</string>
    <string name="low">Ringan</string>
    <string name="medium">Normal</string>
    <string name="high">Berat</string>
    <string name="jenis_aktivitas">Jenis Aktivitas:</string>
    <string name="titlearticle">Tingkatkan Pengetahuan Anda</string>
    <string name="artikel">Artikel</string>
    <string name="home">Home</string>
    <string name="Nasi">Nasi</string>
    <string name="nothing">Gambar Tidak Ditemukan</string>
    <string name="Bakso">Mangkok Bakso\n</string>
    <string name="tahu">Tahu Goreng\n</string>
    <string name="tempe">Tempe\n</string>
    <string name="tahudanBakso">Tahu Goreng \\nBakso</string>
    <string name="telurBalado">Telur Balado</string>
    <string-array name="data_judul">
        <item>Tips Untuk Menjaga Pola Makan</item>
        <item>Tingkat Aktivitas Seseorang</item>
        <item>Kebiasaan Minum yang Benar</item>
        <item>Tips Sarapan Sehat</item>
        <item>Pentinganya Mencatat Makanan</item>

    </string-array>
    <string-array name="data_pengertian">
        <item>kita mulai hari ini dengan langkah kecil menuju pola makan yang lebih baik. Berikut adalah beberapa saran untuk membantu kamu mencapai keseimbangan yang optimal dalam nutrisi dan kesehatan:\n
\n•	Minumlah air yang cukup: Pastikan untuk minum setidaknya 8 gelas air sehari. Air membantu menjaga hidrasi tubuh.
\n•	Pilih makanan sehat: Sertakan dalam pola makanmu berbagai jenis makanan sehat, seperti buah-buahan, sayuran, biji-bijian, dan protein tanpa lemak.
\n•	Hindari makanan olahan: Makanan olahan seringkali mengandung banyak gula tambahan, garam, dan lemak jenuh.
\n•	Hindari makan terlalu larut: Cobalah untuk makan setidaknya 2-3 jam sebelum tidur agar tubuh memiliki waktu untuk mencerna makanan.
\n•	Sarapan sehat: Jangan lewatkan sarapan, dan pastikan sarapanmu mengandung kombinasi yang kompleks untuk memberikan energi yang tahan lama.
\n•	Hindari makanan tinggi gula dan lemak jenuh: Batasi konsumsi makanan tinggi gula dan lemak jenuh.\n
\nSemoga tips ini membantu kamu menjaga pola makan yang sehat!
</item>

        <item>Untuk menghitung total kebutuhan kalori harian, kita perlu mempertimbangkan tingkat aktivitas fisik seseorang. Ada beberapa tingkatan aktivitas yang umumnya digunakan:\n
\n•	Ringan: Ini mencakup aktivitas sehari-hari yang minim, seperti duduk di meja kerja atau di depan komputer, tanpa banyak gerakan fisik. Misalnya, pekerja kantor yang mayoritas waktu bekerja di depan komputer.
\n•	Normal: Ini melibatkan tingkat aktivitas sedang, seperti berjalan kaki, bersepeda ringan, atau melakukan pekerjaan rumah tangga. Ini umumnya mencakup mayoritas orang yang memiliki pekerjaan yang melibatkan aktivitas fisik ringan hingga sedang.
\n•	Berat: Ini mencakup aktivitas fisik yang intens, seperti latihan berat, berlari, atau pekerjaan fisik berat. Orang yang menjalani gaya hidup aktif, misalnya atlet atau pekerja konstruksi, akan termasuk dalam kategori ini.\n
\nJadi, untuk menentukan kebutuhan kalori harian, kita memperhitungkan faktor aktivitas yang mencerminkan tingkat aktivitas fisik sehari-hari.
</item>

        <item>Minum air yang cukup adalah kunci utama untuk menjaga kesehatan tubuh. Sebenarnya kebutuhan cairan setiap individu bisa bervariasi. Meskipun begitu, penting untuk memahami betapa vitalnya air bagi Kesehatan, berikut manfaat dari rutin mengkonsumsi air :\n
\n•	Hidrasi Tubuh: Air membantu menjaga keseimbangan cairan dalam tubuh. Ini sangat penting untuk mendukung fungsi organ tubuh yang optimal.
\n•	Mengurangi Rasa Lapar: Minum air sebelum makan dapat membantu mengurangi rasa lapar. Terkadang, tubuh kita membingungkan rasa haus dengan rasa lapar, dan minum air dapat membantu mengatasi perasaan lapar yang sebenarnya adalah kehausan.
\n\nLalu bagaimana cara kita memastikan minum air dengan cukup :
\n\n• Bawa Botol Air: Bawa botol air kemanapun Anda pergi. Ini membuat lebih mudah untuk minum air sepanjang hari, terutama ketika sibuk dengan kegiatan sehari-hari.
\n•	Atur Pengingat: Gunakan pengingat di ponsel atau aplikasi kesehatan untuk memberitahu Anda untuk minum air secara teratur. Terkadang, kita hanya perlu sedikit dorongan untuk membentuk kebiasaan baik ini.
\n•	Kombinasi dengan Buah: Jika bosan dengan air biasa, tambahkan sedikit rasa dengan mencoba infused water. Tambahkan irisan buah-buahan segar atau mentimun ke dalam air untuk memberikan sentuhan rasa alami.
\n\nDengan memahami pentingnya minum air dan mengikuti tips praktis ini, kita dapat menjaga kesehatan tubuh dengan cara yang sederhana namun efektif. Jadi, mari jaga hidrasi tubuh dan nikmati manfaatnya!
</item>

        <item>Sarapan bukan hanya kegiatan rutin sebelum memulai hari, tetapi juga kunci untuk memberikan energi yang tahan lama. Berikut beberapa tips sederhana untuk sarapan yang sehat:
\n\n•	Jangan Lewatkan Sarapan: Sarapan memberikan kickstart bagi tubuh setelah berpuasa semalaman. Hindari melewatkan sarapan untuk menjaga tingkat energi dan konsentrasi.
\n•	Kombinasi Makanan: Pastikan sarapanmu mengandung kombinasi karbohidrat kompleks (misalnya, oatmeal atau roti gandum), protein (telur atau yogurt), dan serat (buah-buahan atau sayuran). Kombinasi ini memberikan nutrisi seimbang.
\n•	Variasi Menu: Agar tidak bosan, variasikan menu sarapan. Cobalah smoothie buah-buahan dengan granola pada satu hari dan telur rebus dengan sayuran pada hari berikutnya.
\n•	Hindari Makanan Tinggi Gula : Pilih makanan yang rendah gula untuk menghindari lonjakan energi yang singkat. Hindari sereal gula-gulaan atau pastry yang tinggi gula.
\n•	Sesuaikan Porsi dengan Aktivitas: Sesuaikan porsi sarapan dengan aktivitas harianmu. Jika hari ini lebih aktif, pertimbangkan untuk menambahkan sedikit lebih banyak protein atau karbohidrat.
\n\nIngatlah, sarapan sehat bukan hanya tentang kuantitas, tetapi juga kualitas nutrisi yang diberikan. Dengan menyisipkan waktu sejenak untuk sarapan yang sehat, kita dapat meningkatkan keseimbangan energi dan konsentrasi, membantu kita menjalani hari dengan semangat penuh!
</item>

        <item>Kesehatan yang optimal tidak hanya tentang jenis makanan yang kita konsumsi, tetapi juga tentang kesadaran dan pengelolaan pola makan. Salah satu cara sederhana yang dapat membantu kita mencapai tujuan tersebut adalah dengan mencatat makanan yang kita konsumsi setiap hari.
\n\nMengapa Mencatat Makanan Penting?

\n\n•Kesadaran Pola Makan: Mencatat makanan memungkinkan kita untuk lebih sadar tentang apa yang sebenarnya kita konsumsi setiap hari. Dengan melihat catatan tersebut, kita dapat mengidentifikasi kebiasaan makan yang mungkin perlu diperbaiki atau ditingkatkan.
\n•	Pengelolaan Berat Badan: Menjaga catatan makanan dapat menjadi alat yang efektif dalam pengelolaan berat badan. Dengan melihat pola makan secara keseluruhan, kita dapat mengidentifikasi apakah kita mengonsumsi terlalu banyak kalori atau mungkin kurang mendapatkan nutrisi tertentu.
\n•	Identifikasi Pola Makan yang Sehat: Catatan makanan membantu kita mengidentifikasi pola makan yang sehat dan memberikan gambaran tentang sejauh mana kita telah mencapai tujuan nutrisi harian. Ini juga dapat menjadi panduan untuk membuat perubahan positif dalam diet kita.
\n\nCatatan makanan membantu kita mengidentifikasi pola makan yang sehat dan memberikan gambaran tentang sejauh mana kita telah mencapai tujuan nutrisi harian. Ini juga dapat menjadi panduan untuk membuat perubahan positif dalam diet kita.
</item>
    </string-array>
    <string name="nasiMangkukBakso">Nasi, Mangkuk Bakso</string>
    <string name="nasiTahudanGoreng">Nasi, Tahu Goreng</string>
    <string name="nasiTempe">Nasi, Tempe</string>
    <string name="nasiTelurBalado">Nasi, Telur Balado</string>
    <string name="baksoTahudanGoreng">Mangkuk Bakso, Tahu Goreng</string>
    <string name="baksoTempe">Mangkuk Bakso, Tempe</string>
    <string name="baksoTelurBalado">Mangkuk Bakso, Telur Balado</string>
    <string name="tahuGorengTempe">Tahu Goreng, Tempe</string>
    <string name="tahuGorengTelurBalado">Tahu Goreng, Telur Balado</string>
    <string name="tempeTelurBalado">Tempe, Telur Balado</string>
    <string name="nasiMangkukBaksoTahudanGoreng">Nasi, Mangkuk Bakso, Tahu Goreng</string>
    <string name="nasiMangkukBaksoTempe">Nasi, Mangkuk Bakso, Tempe</string>
    <string name="nasiMangkukBaksoTelurBalado">Nasi, Mangkuk Bakso, Telur Balado</string>
    <string name="nasiTahudanGorengTempe">Nasi, Tahu Goreng, Tempe</string>
    <string name="nasiTahudanGorengTelurBalado">Nasi, Tahu Goreng, Telur Balado</string>
    <string name="hasil_scan_kalori_makananmu">Hasil Scan Kalori Makananmu</string>
    <string name="nama_makanan">Nama Makanan :</string>
    <string name="total_kalori">Total Kalori :</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="_80k">80K</string>
    <string name="kembali">Kembali</string>
    <string name="masukan_dulu_datamu_ya">Masukan dulu datamu ya</string>
    <string name="sudah_siap_untuk_memindai_makanananmu">Sudah siap untuk memindai makanananmu?</string>
</resources>