<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:background="@drawable/light_blue"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center|bottom">

    <TextView
        android:id="@+id/hasilScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/hasil_scan_kalori_makananmu"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDetectResult"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="28dp"
        android:rotation="90"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hasilScan" />

    <TextView
        android:id="@+id/namaMakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:textSize="12sp"
        android:textColor="@color/green500"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/nama_makanan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDetectResult" />

    <TextView
        android:id="@+id/Total_Kalori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/green500"
        android:text="@string/total_kalori"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaMakanan" />

    <TextView
        android:id="@+id/tvNamaMakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/nasi_goreng"
        android:layout_marginStart="10dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/namaMakanan"
        app:layout_constraintTop_toTopOf="@+id/namaMakanan" />

    <TextView
        android:id="@+id/tvKaloriMakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:text="@string/_80k"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/Total_Kalori"
        app:layout_constraintTop_toTopOf="@+id/Total_Kalori" />

    <Button
        android:id="@+id/actionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/kembali"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>