<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ui.login.LoginActivity">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/descCal"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="180dp"
                    android:background="@drawable/light_blue"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/gender_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="28dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/gender_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />

                    <RadioGroup
                        android:id="@+id/genderGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginEnd="28dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/gender_label">

                        <RadioButton
                            android:id="@+id/maleRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="12dp"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/male">

                        </RadioButton>

                        <RadioButton
                            android:id="@+id/femaleRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/female">

                        </RadioButton>
                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginEnd="28dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/enter_weight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/genderGroup" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="48dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="28dp"
                        android:gravity="start"
                        android:hint="@string/weight_hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/weight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edt_text"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginEnd="28dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/enter_height"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="48dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginEnd="28dp"
                        android:hint="@string/height_hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/height"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edt_text"

                            android:fontFamily="@font/poppins_regular"
                            android:inputType="number">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginEnd="28dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/enter_age"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="48dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginEnd="28dp"
                        android:hint="@string/age_hint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/age"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/edt_text"
                            android:fontFamily="@font/poppins_regular"
                            android:inputType="number">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/activity_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="28dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/jenis_aktivitas"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

                    <RadioGroup
                        android:id="@+id/activityGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="48dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginEnd="28dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/activity_label">

                        <RadioButton
                            android:id="@+id/lowRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/low"
                            android:fontFamily="@font/poppins_regular">

                        </RadioButton>

                        <RadioButton
                            android:id="@+id/mediumRadio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/medium">

                        </RadioButton>

                        <RadioButton
                            android:id="@+id/highRadio"
                            android:layout_width="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_height="wrap_content"
                            android:text="@string/high">

                        </RadioButton>
                    </RadioGroup>

                    <TextView
                        android:id="@+id/Kalori_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:layout_marginEnd="28dp"
                        android:text="Kalori"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

                    <Button
                        android:id="@+id/btnCalculate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom"
                        android:layout_margin="15dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/calculate" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>